[package]
name = "token_factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
arrayref = "0.3.6"
solana-program = "1.17.7"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }
thiserror = "~1.0"
borsh = "0.10.3"
mpl-token-metadata = "3.2.3"

[lib]
crate-type = ["cdylib", "lib"]
